--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <th colspan="5" id="title">Time Calculator!</th>
             </tr>
             <tr>
-                <td colspan="3" id="output"></td>
+                <td colspan="3" id="output">2h14m16s + 63m12s</td>
                 <td class="button operator" id="c">C</td>
             </tr>
         </thead>
@@ -49,7 +49,7 @@
         </tbody>
     </table>
 
-    <script src="./input.js"></script>
-    <script src="./main.js"></script>
+    <script src="./source/input.js"></script>
+    <script src="./source/main.js"></script>
 </body>
 </html>
