--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </tbody>
     </table>
 
+    <script src="./source/notation.js"></script>
     <script src="./source/input.js"></script>
     <script src="./source/main.js"></script>
 </body>
