fixed input bug

--- a/index.html
+++ b/index.html
@@ -49,13 +49,8 @@
       </tbody>
     </table>
 
-    <script type="module">
-      import "./logic";
-      import "./input";
-      import "./index";
-    </script>
-    <script src="./source/logic.js"></script>
-    <script src="./source/input.js"></script>
-    <script src="./index.js"></script>
+    <script src="input.js"></script>
+    <script src="logic.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
